test/test_suite/errors/error_union.c3
module foo;

faultdef X, Y, Z;

fn void main()
{
    fault foo;
}